# azg-tyres-dashboard

./: .env.example  .gitignore  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/tests/: test_main.py
apps/web/: next.config.mjs  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/action-center/: page.tsx
apps/web/app/components/: CardOptions.tsx  DashboardShell.tsx  Icon.tsx  Initials.tsx  SectionPlaceholder.tsx
apps/web/app/customer-360/: page.tsx
apps/web/app/gp-margin/: page.tsx
apps/web/app/product-mix/: page.tsx
apps/web/app/projection/: page.tsx
apps/web/app/region/: page.tsx
apps/web/app/sales-targets/: page.tsx
apps/web/app/salesman/: page.tsx
apps/web/lib/: comparison.ts  dashboard-data.ts  eto.ts  format.ts
apps/web/public/: _headers
docs/: architecture.md  basic-auth-setup.md  cloudflare-access-plan.md  cloudflare-pages-setup.md  cloudflare-plan.md  github-plan.md  product-blueprint.md  ux-design-system.md
functions/: _middleware.ts
mock-data/: dashboard_actual_snapshot.json  dashboard_sample_redacted.json
scripts/: check_tracked_files.py
semantic/: dashboard_views.sql  kpi_dictionary.md
