[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azg-tyres-dashboard-api"
version = "0.1.0"
description = "FastAPI + DuckDB semantic API for AZG Tyres Dashboard"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "duckdb",
  "pydantic",
  "pytest",
  "httpx"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
